    This was a reversion caused by the relative path changes in 5.20150113.
  * fsck --from remote: When bad content is found in the remote,
    and the local repo does not have a copy of the content, preserve
    the bad content in .git/annex/bad/ to avoid further data loss.
  * fsck --from remote: Avoid downloading a key if it would go over
    the annex.diskreserve limit.

 -- Joey Hess <id@joeyh.name>  Thu, 09 Apr 2015 20:59:43 -0400

git-annex (5.20150409) unstable; urgency=medium

  * This fixes a bug in the assistant introduced by the literal pathspec
    changes in version 5.20150406.
  * --quiet now suppresses progress displays from eg, rsync.
    (Second time's the charm..)
  * fromkey, registerurl: When reading from stdin, allow the
    filename and url, respectively, to contain whitespace.
  * add: If annex.largefiles is set and does not match a file that's being
    added, the file will be checked into git rather than being added to the
    annex. Previously, git annex add skipped over such files; this new
    behavior is more useful in direct mode.
  * proxy: Made it work when run in a new repository before initial
    commit.
  * info: Display repository mode: bare when in a bare (non-direct mode)
    repo.
  * importfeed: Fix feed download when curl is used.
  * importfeed: Error out when passed a non-url.
  * webapp: When adding another local repository, and combining it
    with the current repository, the new repository's remote path
    was set to "." rather than the path to the current repository.
    This was a reversion caused by the relative path changes in 5.20150113.
  * contentlocationn: New plumbing command.

 -- Joey Hess <id@joeyh.name>  Thu, 09 Apr 2015 15:06:38 -0400

git-annex (5.20150406.1) unstable; urgency=medium

  * Fixes a bug in the last release that caused rsync and possibly
    other commands to hang at the end of a file transfer.
    (--quiet is back to not blocking progress displays until